# slam-plus-plus

./: CMakeLists.txt  Changelog.txt  License.txt  Readme.txt
include/: CMakeLists.txt
include/ba_marginals_example/: BAMarginals.h
include/cholmod/: cholmod_config.h  cholmod_core.h
include/csparse/: CMakeLists.txt
include/slam/: 2DSolverBase.h  3DSolverBase.h  BASolverBase.h  BA_Types.h  BaseInterface.h  BaseTypes.h  BaseTypes_Binary.h  BaseTypes_Unary.h  BlockMatrix.h  BlockMatrix.inl  BlockMatrixBase.h  BlockMatrixFBS.h  BlockMatrixFBS.inl  BlockMatrixFBSUtil.h  BlockMatrixVBR.h  BlockUnit.h  Config.h  ConfigSolvers.h  Debug.h  Distances.h  Eigenvalues.h  Eigenvalues.inl  FlatSystem.h  IncrementalPolicy.h  Integer.h  LinearSolverTags.h  LinearSolver_CSparse.h  LinearSolver_CXSparse.h  LinearSolver_CholMod.h  LinearSolver_Schur.h  LinearSolver_UberBlock.h  Main.h  Marginals.h  MemUsage.h  NonlinearSolver_A.h  NonlinearSolver_FastL.h  NonlinearSolver_L.h  NonlinearSolver_Lambda.h  NonlinearSolver_Lambda_LM.h  NonlinearSolver_SPCG.h  (+16 more)
include/slam_app/: BlockBench.h  CMakeLists.txt  Config.h  IncBAParsePrimitives.h  Main.h  ParsePrimitives.h
include/sparse_flops/: Instrument.h
scripts/: Doxyfile  doxygen_modify.css
scripts/incremental_BA/: graph_sort_by_landmarks.sh
src/: CMakeLists.txt
src/ba_marginals_example/: Main.cpp
src/ba_parameter_acra/: BAOptimizer.cpp  CMakeLists.txt  MainL.cpp
src/cholmod/: CMakeLists.txt
src/cholmod/CHOLMOD/Partition/: cholmod_metis.c
src/cholmod/CHOLMOD/Supernodal/: t_cholmod_gpu.c
src/cholmod/METIS/: util.c
src/poly_fitting_example/: Main.cpp
src/slam/: BlockBench.cpp  BlockBenchImpl0.cpp  BlockBenchImpl1.cpp  BlockMatrix.cpp  BlockMatrixTests.cpp  CMakeLists.txt  Covado.cpp  Debug.cpp  IncrementalPolicy.cpp  LinearSolver_CSparse.cpp  LinearSolver_CXSparse.cpp  LinearSolver_CholMod.cpp  LinearSolver_Schur.cpp  LinearSolver_Schur_GPU.cpp  Main.cpp  OrderingMagic.cpp  Parser.cpp  Solve3DImpl.cpp  Tga.cpp  Timer.cpp
src/slam_app/: BlockBench.cpp  BlockBenchImpl0.cpp  BlockUnit.cpp  CMakeLists.txt  Main.cpp  Solve2DImpl.cpp  Solve3DImpl.cpp  Solve3DPoseOnlyImpl.cpp  SolveBAIntrinsicsImpl.cpp  SolveBAStereoImpl.cpp  SolveROCVImpl.cpp  SolveSpheronImpl.cpp
src/slam_online_example/: Main.cpp
src/slam_simple_example/: Main.cpp
trunk/: CMakeLists.txt  Changelog.txt  License.txt  Readme.txt
trunk/data/: Readme.txt
trunk/include/: CMakeLists.txt
trunk/include/ba_parameter_acra/: BAOptimizer.h  Sim3_ParsePrimitives.h
trunk/include/cholmod/: CMakeLists.txt  cholmod_blas.h
trunk/include/cholmod/METIS/: metis.h  proto.h
trunk/include/cxsparse/: CMakeLists.txt  cxs.hpp
trunk/include/slam/: 2DSolverBase.h  3DSolverBase.h  BASolverBase.h  BA_Types.h  BaseInterface.h  BaseTypes.h  BaseTypes_Binary.h  BaseTypes_Unary.h  Bitmap.h  BlockBench.h  BlockMatrix.h  BlockMatrix.inl  BlockMatrixBase.h  BlockMatrixFBS.h  BlockMatrixFBSUtil.h  BlockUnit.h  CMakeLists.txt  Debug.h  FlatSystem.h  IncrementalPolicy.h  Integer.h  LinearSolverTags.h  LinearSolver_CSparse.h  LinearSolver_CXSparse.h  LinearSolver_CholMod.h  LinearSolver_Schur.h  LinearSolver_UberBlock.h  Main.h  Marginals.h  NonlinearSolver_A.h  NonlinearSolver_FastL.h  NonlinearSolver_L.h  NonlinearSolver_Lambda.h  NonlinearSolver_Lambda_Base.h  NonlinearSolver_Lambda_LM.h  NonlinearSolver_SPCG.h  OrderingMagic.h  ParseLoop.h  ParsePrimitives.h  Parser.h  (+13 more)
trunk/include/slam_app/: BlockBench.h  BlockUnit.h  Config.h  Main.h  ParsePrimitives.h
trunk/include/sparse_flops/: Instrument.h
trunk/scripts/: Doxyfile
trunk/scripts/SLAM_app_solver_enabler/: slam_app_solver_enabler.sh
trunk/scripts/tests/: Readme.txt
trunk/src/: CMakeLists.txt
trunk/src/ba_interface_example/: BAOptimizer.cpp
trunk/src/ba_marginals_example/: Main.cpp
trunk/src/ba_parameter_acra/: CMakeLists.txt  MainL.cpp
trunk/src/cholmod/CHOLMOD/Core/: cholmod_common.c
trunk/src/cholmod/METIS/: kmetis.c
trunk/src/eigen/: CMakeLists.txt
trunk/src/incremental_ba_3dv/: Main.cpp
trunk/src/poly_fitting_example/: Main.cpp
trunk/src/slam/: BlockBench.cpp  BlockMatrix.cpp  BlockMatrixTests.cpp  BlockUnit.cpp  CMakeLists.txt  Eigenvalues.cpp  LinearSolver_CXSparse.cpp  LinearSolver_CholMod.cpp  LinearSolver_Schur_GPU.cpp  Main.cpp  OrderingMagic.cpp  Parser.cpp  Solve2DImpl.cpp  Solve2DPoseOnlyImpl.cpp  SolveBAImpl.cpp  Tga.cpp
trunk/src/slam_app/: BlockBenchImpl0.cpp  BlockBenchImpl1.cpp  BlockUnit.cpp  CMakeLists.txt  Covado.cpp  Main.cpp  Solve2DImpl.cpp  Solve2DPoseOnlyImpl.cpp  Solve3DImpl.cpp  Solve3DPoseOnlyImpl.cpp  SolveBAImpl.cpp  SolveBAIntrinsicsImpl.cpp  SolveSpheronImpl.cpp
trunk/src/slam_dataassoc_example/: CMakeLists.txt  Main.cpp
trunk/src/slam_online_example/: CMakeLists.txt  Main.cpp
trunk/src/slam_simple_example/: CMakeLists.txt  Main.cpp
