ADD_SUBDIRECTORY(csparse)
ADD_SUBDIRECTORY(eigen)
ADD_SUBDIRECTORY(cholmod)
ADD_SUBDIRECTORY(cxsparse)
ADD_SUBDIRECTORY(slam)
IF(SLAM_P_P_BUILD_MAIN_APP)
	ADD_SUBDIRECTORY(slam_app)
ENDIF(SLAM_P_P_BUILD_MAIN_APP)
IF(SLAM_P_P_BUILD_EXAMPLES)
	ADD_SUBDIRECTORY(slam_simple_example)
	ADD_SUBDIRECTORY(slam_online_example)
	ADD_SUBDIRECTORY(slam_dataassoc_example)
	ADD_SUBDIRECTORY(slam_compact_pose_example)
	ADD_SUBDIRECTORY(slam_compact_pose_ijrr)
	ADD_SUBDIRECTORY(ba_interface_example)
	ADD_SUBDIRECTORY(ba_marginals_example)
	ADD_SUBDIRECTORY(ba_parameter_acra)
ENDIF(SLAM_P_P_BUILD_EXAMPLES)
